# itmo-code

./: .gitignore
algo/labs/hash/: CMakeLists.txt  bunkers.cpp  check.cpp  hackhash.cpp  lecture.cpp  lecture.h  linkedmap.cpp  map.cpp  multimap.cpp  set.cpp
algo/labs/rmqlca/: g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  task1.cpp  task2.cpp  task4.cpp  task6.cpp
algo/labs/tests/: answers_multimap.out  checker.py  multimap.in  multimap.out  test1.py  tests.py  windows.in
cpp/conspects/: 12.05.md  24.03.md  28.04.md  cpp-lecture2.md
cpp/huffman/: .gitignore
cpp/huffman/utility/: basic_coder.cpp  basic_coder.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  utility.cpp
cpp/hw01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mul  mul.asm  mult  sub.asm  test.txt
cpp/hw01-build/: CMakeCache.txt  Makefile  cmake_install.cmake  hw01.cbp  mul  sub
cpp/hw02/: CMakeCache.txt  CMakeLists.txt  Makefile  big_integer.cpp  big_integer.h  big_integer_testing  big_integer_testing.cpp  cmake_install.cmake  hw02.cbp  main.cpp
cpp/prac2/: main.cpp  vector.h
dm/labs/cfg/: automaton.cpp  epsilon.cpp
dm/labs/machines/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
dm/labs/teorver/: exam.py  lottery.in  lottery.out  lottery.py  shooter.py  tests.py
paradigms/hw05/src/: Main.java
paradigms/hw06/src/: Main.java
paradigms/hw07/src/: Main.java
paradigms/hw08/src/: Main.java
paradigms/hw09/: functionalExpression.js
paradigms/hw10/: objectExpression.js
paradigms/hw11/: objectExpression.js
(+126 files in other folders)
